# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  19 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    More bootsplash fixes, bug #21019 (comment #21).

    Remove the killall5 stuff from /etc/init.d/halt.sh, as it messes with
    bootsplash.  Add support to kill processes still using non-critical
    mounts with fuser though.

  17 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Bootsplash fixes from Michael Aichler <micha@aichler.net>, (comment #15
    and #16 from bug #21019).

    Bootsplash coded did not play nice with boot profiles, so I fixed that
    as well.  Some other style tweaks.

    Fix /sbin/MAKEDEV to use 'user:group' form, and not depriciated '.'.
    Also changed the permissions on tty's, ibcs and scanner devices
    to 0660.

* rc-scripts 1.4.3.11p2 (14 Sep 2003)

  14 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Revert previous changes, and substitute it for the bootsplash patches
    from Michael Aichler <micha@aichler.net>, bug #21019.  His www pages
    can be reached at:
    
      http://www.aichler.net/gentoo/bootsplash/

    I should note that the bootsplash stuff is not 100% tested.
    

* rc-scripts 1.4.3.11p1 (14 Sep 2003)

  14 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Initial bootsplash patch as from LiveCD's.

    Add more tty's to /etc/init.d/numlock, bug #28252.

* rc-scripts 1.4.3.11 (14 Sep 2003)

  14 Oct 2003; Martin Schlemmer <azarah@gentoo.org>:

    Add initial udev support.  Modified /sbin/rc and /etc/init.d/halt.sh.
    Resolves bug #27527.

    Add squid to /etc/services, bug #30995.  Other cleanups from rac.

    Add patch from Kumba <kumba@gentoo.org> to MAKEDEV to not allow
    running while pwd is root (/).

    Add 'after hotplug' to /etc/init.d/consolefont, bug #30856.

    Add entry for floppy in /etc/fstab, bug #30574.
